--- a/etc/init.rc
+++ b/etc/init.rc
@@ -38,6 +38,9 @@ on init
     write /proc/sys/kernel/panic_on_oops 1
     write /proc/sys/vm/max_map_count 1000000
 
+    # pstore/ramoops previous console log
+    mount pstore pstore /sys/fs/pstore
+
     # Mount binderfs
     mkdir /dev/binderfs
     mount binder binder /dev/binderfs stats=global
